--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,19 @@
             "email": "ibrahim@webfiori.com"
         }
     ],
+    "license":"MIT",
+    "keywords":[
+        "cli",
+        "command line",
+        "php",
+        "terminal"
+    ],
     "require": {
-        "webfiori/file":"1.1.3"
+        "webfiori/file":"1.2.*"
     },
     "autoload" :{
         "psr-4":{
-            "webfiori\\cli\\":"src\\webfiori\\cli"
+            "webfiori\\cli\\":"webfiori\\cli"
         }
     }
 }
