--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,22 @@
     "require": {
         "webfiori/file":"1.3.*"
     },
+    "require-dev": {
+        "phpbench/phpbench": "^1.0",
+        "symplify/easy-coding-standard":"12.0.6",
+        "symplify/easy-ci":"11.3.1.72"
+    },
     "autoload" :{
         "psr-4":{
             "webfiori\\cli\\":"webfiori\\cli"
         }
-    }
+    },
+    "scripts" : {
+        "check-cs": "bin/ecs check --ansi",
+        "fix-cs": "bin/ecs check --fix --ansi",
+        "phpstan": "vendor/bin/phpstan analyse --ansi  --error-format symplify"
+    },
+    "bin": [
+        "bin/wfc"
+    ]
 }
