--- a/.github/workflows/php73.yml
+++ b/.github/workflows/php73.yml
@@ -28,7 +28,7 @@ jobs:
     
     steps: 
       - name: Clone Repo
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
       
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -65,7 +65,9 @@ jobs:
         run: phpunit
       
       - name: CodeCov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
         
       - name: SonarCloud
         uses: SonarSource/sonarcloud-github-action@master
