--- a/.github/workflows/php84.yml
+++ b/.github/workflows/php84.yml
@@ -1,20 +1,21 @@
-name: Build PHP 8.0
+name: Build PHP 8.4
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
   pull_request:
     branches: [ main ]
 
 jobs:
+  
   test:
-    runs-on: ${{ matrix.os }}
-    
+    runs-on: ${{ matrix.os }} 
+
     strategy: 
       fail-fast: true
       matrix: 
         os: [ ubuntu-latest ]
-        php: [ 8.0 ]
+        php: [8.4]
             
     name: PHP${{matrix.php}} - ${{matrix.os}}
     
@@ -27,17 +28,19 @@ jobs:
         with:
           php-version: ${{ matrix.php }} 
           extensions: mysqli, mbstring, sqlsrv
-          tools: phpunit:8.5.13
+          tools: phpunit:9.5.20, composer, symplify/easy-coding-standard:12.0.6, phpbench/phpbench:1.2.14
           
-     
-      
       - name: Install Dependencies
         run: composer install --prefer-dist --no-interaction --no-dev
-        
-      - name: Execute Tests
-        run: phpunit
       
+      - name: Execute Tests
+        run: phpunit --configuration tests/phpunit.xml
+        
       - name: CodeCov
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}   
+          token: ${{ secrets.CODECOV_TOKEN }}
+        
+
+  
+      
