--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "webfiori/file":"1.3.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "10.*"
     },
     "autoload" :{
         "psr-4":{
