--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "scripts" : {
-        "phpunit": "vendor/bin/phpunit -c tests/phpunit.xml",
+        "test": "vendor/bin/phpunit -c tests/phpunit.xml",
         "wfcli":"bin/wfc",
         "check-cs": "bin/ecs check --ansi",
         "fix-cs": "bin/ecs check --fix --ansi",
