ci: Updated Workflows

--- a/.github/workflows/php83.yml
+++ b/.github/workflows/php83.yml
@@ -4,67 +4,42 @@ on:
   push:
     branches: [ main, dev ]
   pull_request:
-    branches: [ main ]
-
+    branches: [ main, dev ]
+env:
+  OPERATING_SYS: ubuntu-latest
+  PHP_VERSION: 8.3
 jobs:
+
   test:
-    runs-on: ${{ matrix.os }} 
-
-    strategy: 
-      fail-fast: true
-      matrix: 
-        os: [ ubuntu-latest ]
-        php: [8.3]
+    name: Run Tests
+    uses: WebFiori/workflows/.github/workflows/test-php.yaml@main
+    with:
+      php-version: '8.3'
+      phpunit-config: 'tests/phpunit10.xml'
             
-    name: PHP${{matrix.php}} - ${{matrix.os}}
-    
-    steps: 
-      - name: Clone Repo
-        uses: actions/checkout@v4
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }} 
-          extensions: mysqli, mbstring, sqlsrv
-          tools: phpunit:9.5.20, composer
 
-      - name: Install Dependencies
-        run: composer install --prefer-dist --no-interaction --no-dev
-      
-      - name: Execute Tests
-        run: phpunit --configuration tests/phpunit.xml
-        
-      - name: CodeCov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-  release_staging:
-    name: Prepare Beta Release Branch / Publish Release
-    needs:
-      - "test"
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev'
-    steps:
-      - uses: actions/checkout@v4
-      - uses: googleapis/release-please-action@v4
-        with:
-          release-type: php
-          target-branch: dev
-          config-file: release-please-config.json
-          token: ${{ secrets.GITHUB_TOKEN }}
+  code-coverage:
+    name: Coverage
+    needs: test
+    uses: WebFiori/workflows/.github/workflows/coverage-codecov.yaml@main
+    with:
+      php-version: '8.3'
+      coverage-file: 'php-8.3-coverage.xml'
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}  
 
-  release_prod:
+  code-quality:
+    name: Code Quality
+    needs: test
+    uses: WebFiori/workflows/.github/workflows/quality-sonarcloud.yaml@main
+    with:
+      coverage-file: 'php-8.3-coverage.xml'
+    secrets:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
+  release-prod:
     name: Prepare Production Release Branch / Publish Release
-    needs:
-      - "test"
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      - uses: googleapis/release-please-action@v4
-        with:
-          release-type: php
-          target-branch: main
-          config-file: release-please-config.json
-          token: ${{ secrets.GITHUB_TOKEN }}
+    needs: [code-coverage, code-quality]
+    uses: WebFiori/workflows/.github/workflows/release-php.yaml@main
+    with:
+      branch: 'main'
