--- a/.github/workflows/php82.yml
+++ b/.github/workflows/php82.yml
@@ -2,40 +2,26 @@ name: Build PHP 8.2
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   test:
-    runs-on: ${{ matrix.os }} 
+    name: Run Tests
+    uses: WebFiori/workflows/.github/workflows/test-php.yaml@main
+    with:
+      php-version: '8.2'
+      phpunit-config: "tests/phpunit10.xml"
+
+  code-coverage:
+    name: Coverage
+    needs: test
+    uses: WebFiori/workflows/.github/workflows/coverage-codecov.yaml@main
+    with:
+      php-version: '8.2'
+      coverage-file: 'php-8.2-coverage.xml'
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     
-    strategy: 
-      fail-fast: true
-      matrix: 
-        os: [ ubuntu-latest ]
-        php: [8.2]
-            
-    name: PHP${{matrix.php}} - ${{matrix.os}}
-    
-    steps: 
-      - name: Clone Repo
-        uses: actions/checkout@v4
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }} 
-          extensions: mysqli, mbstring, sqlsrv
-          tools: phpunit:9.5.20, composer
-            
-      - name: Install Dependencies
-        run: composer install --prefer-dist --no-interaction --no-dev
-      
-      - name: Execute Tests
-        run: phpunit --configuration tests/phpunit.xml
         
-      - name: CodeCov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          
