--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=webfiori
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=cli
 #sonar.projectVersion=1.0
-sonar.exclusions=tests/**,
+sonar.exclusions=tests/**,examples/**
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 sonar.php.coverage.reportPaths=clover.xml
