--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "webfiori/file":"2.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "friendsofphp/php-cs-fixer": "^3.86"
     },
     "autoload" :{
         "psr-4":{
@@ -35,7 +36,7 @@
         "test10": "vendor/bin/phpunit -c tests/phpunit10.xml",
         "wfcli":"bin/wfc",
         "check-cs": "bin/ecs check --ansi",
-        "fix-cs": "bin/ecs check --fix --ansi",
+        "fix-cs": "vendor/bin/php-cs-fixer fix --config=php_cs.php.dist",
         "phpstan": "vendor/bin/phpstan analyse --ansi  --error-format symplify"
     },
     "bin": [
